# paises-virus

./: .env.example  Exportar_DataFrame_csv  README.md  input_10.json  pyproject.toml
src/: main.py
